--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>My Profile | James Walker</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+  </body>
+</html>
