--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Profile | James Walker</title>
+    <title>My Profile &mdash; James Walker</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 class="heading1">Hello World</h1>
   </body>
 </html>
