--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>My Profile &mdash; James Walker</title>
+    <link rel="stylesheet" href="master.css">
   </head>
   <body>
-    <h1 class="heading1">Hello World</h1>
+    <h1 id="idh1" class="heading1">Hello World</h1>
+
+
+    <script src='master.js' charset="utf-8"></script>
   </body>
 </html>
