--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -30,10 +30,10 @@
           <nav>
             <ul>
               <li><a class="nav-Link" href="/">Home</a></li>
-              <li><a class="nav-Link" href="/Ideal-Job/index.html">Career</a></li>
-              <li><a class="nav-Link" href="/Profile">Profile</a></li>
-              <li><a class="nav-Link active" href="/Project-Idea">Project</a></li>
-              <li><a class="nav-Link" href="/References">References</a></li>
+              <li><a class="nav-Link" href="/Ideal-Job/">Career</a></li>
+              <li><a class="nav-Link" href="/Profile/">Profile</a></li>
+              <li><a class="nav-Link active" href="/Project-Idea/">Project</a></li>
+              <li><a class="nav-Link" href="/References/">References</a></li>
               <!--<li><a class="nav-Link" href="/"></a></li>-->
             </ul>
           </nav>
@@ -75,10 +75,10 @@
         <nav>
           <ul>
             <li><a class="nav-Link" href="/">Home</a></li>
-            <li><a class="nav-Link" href="/Ideal-Job">career</a></li>
-            <li><a class="nav-Link" href="/Profile">Profile</a></li>
-            <li><a class="nav-Link active" href="/Project-Idea">Project</a></li>
-            <li><a class="nav-Link" href="/References">References</a></li>
+            <li><a class="nav-Link" href="/Ideal-Job/">career</a></li>
+            <li><a class="nav-Link" href="/Profile/">Profile</a></li>
+            <li><a class="nav-Link active" href="/Project-Idea/">Project</a></li>
+            <li><a class="nav-Link" href="/References/">References</a></li>
             <!--<li><a class="nav-Link" href="/"></a></li>-->
           </ul>
         </nav>
