--- a/Ideal-Job/index.html
+++ b/Ideal-Job/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="nav-bar-wrapper">
                 <div class="logo-wrapper" >
-                    <a href="/"><strong class="name-one">Ideal </strong><strong class="name-two">Career</strong></a>
+                    <a href="/"><strong class="name-one">James</strong><strong class="name-two">Walker</strong></a>
                 </div>
                 <div class="drop-menu-wrapper">
                   <button id="side-nav-btn" title="navigate" type="button" name="menu">&#9776;</button>
