--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -33,8 +33,6 @@
               <li><a class="nav-Link" href="/Ideal-Job/">Career</a></li>
               <li><a class="nav-Link" href="/Profile/">Profile</a></li>
               <li><a class="nav-Link active" href="/Project-Idea/">Project</a></li>
-              <li><a class="nav-Link" href="/References/">References</a></li>
-              <!--<li><a class="nav-Link" href="/"></a></li>-->
             </ul>
           </nav>
           <hr>
@@ -53,14 +51,14 @@
 
     <div class="header-img-wrapper">
       <div class="header-img">
-        <img src="/resources/img/projectplan.jpg" alt="Empty shelves caused by panic buying">
-        <!--
-                   <div class="logo-wrapper" style="width: 100vw; height: 100vh; display:flex; justify-content: center;
+
+        <div class="logo-wrapper" style="width: 100vw; height: 100vh; display:flex; justify-content: center;
                    align-items: center;">
-                       <a style="width: 100%; height: auto;
-                       font-size: 8vw; text-align: center;"><strong class="name-one">James</strong><strong class="name-two"><strong></strong>Walker</strong></a>
-                   </div>
-                  -->
+          <a style="width: 100%; height: auto;
+                       font-size: 8vw; text-align: center;"><strong class="name-one">Project</strong><strong
+              class="name-two"><strong></strong>idea</strong></a>
+        </div>
+
       </div>
     </div>
     <div class="nav-bar-wrapper">
@@ -78,8 +76,6 @@
             <li><a class="nav-Link" href="/Ideal-Job/">career</a></li>
             <li><a class="nav-Link" href="/Profile/">Profile</a></li>
             <li><a class="nav-Link active" href="/Project-Idea/">Project</a></li>
-            <li><a class="nav-Link" href="/References/">References</a></li>
-            <!--<li><a class="nav-Link" href="/"></a></li>-->
           </ul>
         </nav>
       </div>
@@ -89,16 +85,24 @@
     </div>
     <!--Beginning of Body-->
     <div class="main-content-wrapper">
+
       <div class="main-content">
         <div>
+          <h1>Project Idea</h1>
+          <h4>Community Supply control</h4>
+        </div>
+
+        <div>
           <h3>Overview</h3>
-          <p class="paragraph">This Application is designed to help people to manage supplies in their home. It will create a shopping
+          <p class="paragraph">This Application is designed to help people to manage supplies in their home. It will
+            create a shopping
             lists automatically based on what has been used and what is still available. It will also give notifications
             regarding expiry dates on food</p>
         </div>
         <div>
           <h3>Motivation</h3>
-          <p class="paragraph">The motivation for this application idea has manifested due to the current economic and humanitarian crisis
+          <p class="paragraph">The motivation for this application idea has manifested due to the current economic and
+            humanitarian crisis
             we are all facing due to the to the covid-19 pandemic. It saddens me that there is so much panic and
             distress amongst not only our communities in Australia, but around the world. Everyone has been affected by
             the shortage in supplies.
@@ -112,19 +116,36 @@
         </div>
         <div>
           <h3>Description</h3>
-          <p class="paragraph">desc...</p>
+          <p class="paragraph">The Community supply control is an Idea I have to mitigate the impact of panic buying
+            during times of crisis and hopefully prevent it. The main aim is to monitor supply to individuals for
+            critical items such as groceries. It is also designed to limit the crowds which attend supermarkets by
+            implementing odd and even days similar to that of water restrictions. This will be determined by street
+            number.
+
+            In order to enter the supermarket, the customer must first scan your card at a card reader which will open
+            the doors. The card must then be scanned at the checkout and will alert the checkout attendant if an item
+            has been over purchased. The customer can monitor their limits on a mobile application and if they scan the
+            item with their phone it will let them know if they can purchase it which will save embarrassment at the
+            checkout.
+
+            The customer can purchase the maximum per person allowance for each member of their family without the other
+            members attending the store.
+
+            This system with be linked with the relevant departments such as the department of human services and will
+            allow the implemented limits to be across the country rather than each supermarket.</p>
         </div>
         <div>
           <h3>Tools and Technologies</h3>
-          <p class="paragraph">Card
-
-            Card reader/barcode scanner
-
-            API’s </p>
+          <p class="paragraph">
+            This system will require the use of cards. A Medicare card can be used as an alternative to dispensing new
+            cards. Card readers will be required, and databases will need to be created and managed. It will be
+            dependent on mobile applications and API’s.
+          </p>
         </div>
         <div>
           <h3>Skills required</h3>
-          <p class="paragraph">In order to successfully develop this system, the team of developers will need to be able to program using
+          <p class="paragraph">In order to successfully develop this system, the team of developers will need to be able
+            to program using
             languages such as JAVA, Python, C#, C++ and swift to develop the applications to interact with the system
             such mobile, desktop and web applications.
 
@@ -136,7 +157,8 @@
         </div>
         <div>
           <h3>Outcome</h3>
-          <p class="paragraph">The successful integration of this application in the community will vastly mitigate the distress felt by
+          <p class="paragraph">The successful integration of this application in the community will vastly mitigate the
+            distress felt by
             all members affected by an emergency where panic buying has or is at risk of occurring. This will be due to
             the ability that supermarkets will have to monitor customer limits on purchases such as one per person.
         </div>
