--- a/Profile/index.html
+++ b/Profile/index.html
@@ -55,8 +55,8 @@
         <div class="logo-wrapper" style="width: 100vw; height: 100vh; display:flex; justify-content: center;
                    align-items: center;">
           <a style="width: 100%; height: auto;
-                       font-size: 8vw; text-align: center;"><strong class="name-one">Pro</strong><strong
-              class="name-two"><strong></strong>file</strong></a>
+                       font-size: 8vw; text-align: center;"><strong class="name-one">Personal</strong><strong
+              class="name-two"><strong></strong>Porfile</strong></a>
         </div>
 
       </div>
