--- a/Profile/index.html
+++ b/Profile/index.html
@@ -56,7 +56,7 @@
                    align-items: center;">
           <a style="width: 100%; height: auto;
                        font-size: 8vw; text-align: center;"><strong class="name-one">Personal</strong><strong
-              class="name-two"><strong></strong>Porfile</strong></a>
+              class="name-two"><strong></strong>Profile</strong></a>
         </div>
 
       </div>
