--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -89,7 +89,7 @@
       <div class="main-content">
         <div>
           <h1>Project Idea</h1>
-          <h4>Community Supply control</h4>
+          <h4>Panic Mitigation and Supply Control</h4>
         </div>
 
         <div>
