--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -89,48 +89,80 @@
       <div class="main-content">
         <div>
           <h1>Project Idea</h1>
-          <h4>Supermarket Panic Mitigation</br>and Emergency crisis control System</h4>
+          <h4>Community Supply control</h4>
         </div>
 
         <div>
           <h3>Overview</h3>
-          <p class="paragraph">This Application is designed to help people to manage supplies in their home. It will
-            create a shopping
-            lists automatically based on what has been used and what is still available. It will also give notifications
-            regarding expiry dates on food</p>
+          <p class="paragraph">
+            This purpose of this system is to assist communities and supermarkets manage supplies during a state of
+            emergency or humanitarian crisis. The system is designed to mitigate panic buying, supermarket mayhem,
+            aggression and to maintain the good order of the community and create a level of fairness and equality
+            within the communities and to support its most vulnerable. </p>
         </div>
         <div>
           <h3>Motivation</h3>
-          <p class="paragraph">The motivation for this application idea has manifested due to the current economic and
-            humanitarian crisis
+          <p class="paragraph">
+            The motivation for this application idea has manifested due to the current economic and humanitarian crisis
             we are all facing due to the to the covid-19 pandemic. It saddens me that there is so much panic and
-            distress amongst not only our communities in Australia, but around the world. Everyone has been affected by
-            the shortage in supplies.
-
+            distress amongst not only our communities in Australia, but around the world. Everyone is affected by the
+            shortage in supplies.
+          </p>
+        </div>
+        <div>
+          <p>
             This is having a major impact on our communities most vulnerable. I am not only referring to our global
-            senior community. I am talking about everyone. Disabled, unemployed, student’s, parent’s and thier children.
-            In a time of crisis, it may not matter how much money we have because, if we can’t buy food and supplies, we
-            will feel the impact of any crisis on a much deeper level.
-
-            This has raised the question. Can something be done? </p>
+            senior community. I am talking about everyone. Disabled and their carers, unemployed, student’s, parent’s
+            and thier children and the homeless. In a time of crisis, it may not matter how much money we have because,
+            if we can’t buy food and supplies, we will feel the impact of any crisis on a much deeper level.
+        </div>
+        <div>
+          This has raised the question. Can something be done? </p>
         </div>
         <div>
           <h3>Description</h3>
-          <p class="paragraph">The Community supply control is an Idea I have to mitigate the impact of panic buying
-            during times of crisis and hopefully prevent it. The main aim is to monitor supply to individuals for
-            critical items such as groceries. It is also designed to limit the crowds which attend supermarkets by
-            implementing odd and even days similar to that of water restrictions. This will be determined by street
-            number.
-
+          <p class="paragraph">
+            The Supermarket Panic Mitigation and Emergency crisis control is an Idea I have to mitigate the impact of
+            panic buying during times of crisis and hopefully prevent it. The main purpose is to monitor supply to
+            individuals for critical items such as groceries. It is also designed to limit crowds which attend
+            supermarkets by implementing odd and even days similar to that of water restrictions. This will be
+            determined by street number. A family will have limits on how many times a week they can attend the store.
+          </p>
+        </div>
+        <div>
+          <p>
             In order to enter the supermarket, the customer must first scan your card at a card reader which will open
             the doors. The card must then be scanned at the checkout and will alert the checkout attendant if an item
             has been over purchased. The customer can monitor their limits on a mobile application and if they scan the
             item with their phone it will let them know if they can purchase it which will save embarrassment at the
             checkout.
-
-            The customer can purchase the maximum per person allowance for each member of their family without the other
-            members attending the store.
-
+          </p>
+        </div>
+        <div>
+          <p>
+            The system can also have the ability to implement a booking platform to further maintain the good order of
+            the
+            community, although, this could further complicate the situation if servers crash due to high traffic
+            volumes
+            or denial of service attacks.
+          </p>
+        </div>
+        <div>
+          <p>
+            The customer can monitor their limits on a mobile application and if they scan the item with their phone and
+            will let them know if they can purchase the product which will save embarrassment at the checkout and reduce
+            holdups and re-stocking.
+          </P>
+        </div>
+        <div>
+          <p>
+            The customer can purchase the maximum number of items per person for each member of their family without the
+            other members attending the store by using a family card similar to a Medicare card (The Medicare card is an
+            option for budgeting purposes).
+          </p>
+        </div>
+        <div>
+          <p>
             This system with be linked with the relevant departments such as the department of human services and will
             allow the implemented limits to be across the country rather than each supermarket.</p>
         </div>
@@ -148,12 +180,16 @@
             to program using
             languages such as JAVA, Python, C#, C++ and swift to develop the applications to interact with the system
             such mobile, desktop and web applications.
-
+          </P>
+        </div>
+        <div>
+          <p>
             Programming knowledge of SQL will be required to develop the Database management systems to store customer
             information, previous purchases and limits which have been enforced. PHP will be used for communicating
             between the application and the database. It will be important to have the appropriate knowledge to be able
             use Application programming interfaces (API’s) as these may be important in the development of the system to
             allow our supermarkets and the department of human services to work together. </p>
+          </p>
         </div>
         <div>
           <h3>Outcome</h3>
@@ -161,24 +197,38 @@
             distress felt by
             all members affected by an emergency where panic buying has or is at risk of occurring. This will be due to
             the ability that supermarkets will have to monitor customer limits on purchases such as one per person.
+          </p>
         </div>
-        This will further mitigate the issue a lot of people who work are facing, such as not being able to go to the
-        store until the end of the day when shelves have been cleared, or families only being able to get only one of an
-        item such as pasta when there are more than one person in the home because a partner is at work and the kids are
-        at school and cannot attend the grocery store.
-
-        This will solve the problem families are facing by drastically reducing the crowds within a supermarket by
-        having odd and even days. It will allow one person in a home to buy enough supplies within the limits allowed
-        for each person in that family without everyone being there. This will encourage society to function as normal
-        as possible during a time of mass panic and uncertainty.
-
-        The development of this system will have a positive impact on the community. Although it will be frustrating, if
-        successful It should aid the reduction of violence and aggression, encourage compassion, honesty and integrity.
-        But most of all it will bring the community together, not divide it. And everyone will get their fair share.
-        </p>
-
-
-
+        <div>
+          <p>
+            This will further mitigate the issue a lot of people who work are facing, such as not being able to go to
+            the
+            store until the end of the day when shelves have been cleared, or families only being able to get only one
+            of an
+            item such as pasta when there are more than one person in the home because a partner is at work and the kids
+            are
+            at school and cannot attend the grocery store.
+          </P>
+        </div>
+        <div>
+          <p>
+            This will solve the problem families are facing by drastically reducing the crowds within a supermarket by
+            having odd and even days. It will allow one person in a home to buy enough supplies within the limits
+            allowed
+            for each person in that family without everyone being there. This will encourage society to function as
+            normal
+            as possible during a time of mass panic and uncertainty.
+          </P>
+        </div>
+        <div>
+          <p>
+            The development of this system will have a positive impact on the community. Although it will be
+            frustrating, if
+            successful It should aid the reduction of violence and aggression, encourage compassion, honesty and
+            integrity.
+            But most of all it will bring the community together, not divide it. And everyone will get their fair share.
+          </p>
+        </div>
       </div>
 
     </div>
