--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -140,11 +140,9 @@
         </div>
         <div>
           <p>
-            The system can also have the ability to implement a booking platform to further maintain the good order of
-            the
-            community, although, this could further complicate the situation if servers crash due to high traffic
-            volumes
-            or denial of service attacks.
+            The system will also have the ability to implement a booking platform to further maintain the good order of
+            the community, although, this could further complicate the situation if servers crash due to high traffic
+            volumes or denial of service attacks.
           </p>
         </div>
         <div>
@@ -176,7 +174,8 @@
         </div>
         <div>
           <h3>Skills required</h3>
-          <p class="paragraph">In order to successfully develop this system, the team of developers will need to be able
+          <p class="paragraph">
+            In order to successfully develop this system, the team of developers will need to be able
             to program using
             languages such as JAVA, Python, C#, C++ and swift to develop the applications to interact with the system
             such mobile, desktop and web applications.
@@ -193,7 +192,8 @@
         </div>
         <div>
           <h3>Outcome</h3>
-          <p class="paragraph">The successful integration of this application in the community will vastly mitigate the
+          <p class="paragraph">
+            The successful integration of this application in the community will vastly mitigate the
             distress felt by
             all members affected by an emergency where panic buying has or is at risk of occurring. This will be due to
             the ability that supermarkets will have to monitor customer limits on purchases such as one per person.
@@ -202,10 +202,8 @@
         <div>
           <p>
             This will further mitigate the issue a lot of people who work are facing, such as not being able to go to
-            the
-            store until the end of the day when shelves have been cleared, or families only being able to get only one
-            of an
-            item such as pasta when there are more than one person in the home because a partner is at work and the kids
+            the store until the end of the day when shelves have been cleared, or families only being able to get only one
+            of an item such as pasta when there are more than one person in the home because a partner is at work and the kids
             are
             at school and cannot attend the grocery store.
           </P>
