--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -89,7 +89,10 @@
       <div class="main-content">
         <div>
           <h1>Project Idea</h1>
-          <h4>Community Supply control</h4>
+          <h4>
+            Supermarket Panic Mitigation and</br>
+            Emergency crisis control System
+          </h4>
         </div>
 
         <div>
@@ -202,8 +205,10 @@
         <div>
           <p>
             This will further mitigate the issue a lot of people who work are facing, such as not being able to go to
-            the store until the end of the day when shelves have been cleared, or families only being able to get only one
-            of an item such as pasta when there are more than one person in the home because a partner is at work and the kids
+            the store until the end of the day when shelves have been cleared, or families only being able to get only
+            one
+            of an item such as pasta when there are more than one person in the home because a partner is at work and
+            the kids
             are
             at school and cannot attend the grocery store.
           </P>
