--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -91,7 +91,7 @@
           <h1>Project Idea</h1>
           <h4>
             Supermarket Panic Mitigation and</br>
-            Emergency crisis control System
+            Emergency Crisis Control System
           </h4>
         </div>
 
