--- a/Profile/index.html
+++ b/Profile/index.html
@@ -108,25 +108,29 @@
               <p>
                 These test results demonstrate my ability to Understand a person’s feelings and to show compassion and
                 empathy towards them. I am a good listener and will watch out for social cues which can let me know if I
-                am pushing boundaries. I watch listen and learn. I can teach myself to do something by watching someone
-                do it. Although not always the case, I am a very hans on person and pick things up quickly.
+                am pushing boundaries. 
+              </p>
+              </div>
+            <div>
+              <p>
+                I am a watch, listen and learn type of person. I can learn to do something by watching someone
+                do it. Although not always the case, I am a very hands on person and pick things up quickly.
               </p>
             </div>
             <div>
               <h3>How will these results influence my behavior</h3>
               <p>
-                These results indicate that I have the confidence to put my ideas out there and may try to lead the
-                team. I should be aware of my behavior to make sure I don’t become to outspoken when discussing ideas.
+                These results indicate that I have the confidence to put my ideas out there will strive to lead the
+                team positively and achieve the best outcome possible. I should be aware of my behavior and ensure I don’t become to outspoken when discussing ideas.
+                I should keep an open mind when listening to others and use constructive critism when challenging another persons views.
               </p>
             </div>
             <div>
               <h3>What should I take into account when forming a team</h3>
               <p>
-
-
                 When forming a team, I should look for like-minded people who are open to new ideas and are willing to
                 think outside the box and have an improvise adapt and overcome attitude. I will want to team up with
-                other who have a professional mindset, are self-motivated and share similar interests to me.
+                others who have a professional mindset, are self-motivated and share similar interests to me.
               </p>
             </div>
           </div>
