--- a/Profile/index.html
+++ b/Profile/index.html
@@ -130,7 +130,7 @@
               <p>
                 When forming a team, I should look for like-minded people who are open to new ideas and are willing to
                 think outside the box and have an improvise adapt and overcome attitude. I will want to team up with
-                others who have a professional mindset, are self-motivated and share similar interests to me.
+                others who have a professional mindset, are self-motivated and share similar interests and values to me.
               </p>
             </div>
           </div>
