--- a/index.html
+++ b/index.html
@@ -153,21 +153,23 @@
               <p>My name is James. Although, I prefer to be addressed as Jim. I was born in Melbourne, Australia in 1983
                 and
                 raised in Sydney until the age of 15. My only spoken language is English however, I can communicate with
-                people from the deaf community using AUSLAN (Australian sign language). This is due to the kindness of
-                Latrobe university who funded a private tutor to come to my home weekly to say thanks for allowing my
+                people from the deaf community using some basic AUSLAN (Australian sign language). This is due to the kindness of
+                Latrobe university who funded a private tutor to come to my home weekly for 20 weeks to say thanks for allowing my
                 profoundly deaf daughter to participate in a study into the development of children with Cochlear
-                Implants. </p>
+                Implants. 
+              </p>
             </div>
             <div>
-              <p>In 1999 I left school mid-way through year 10 to begin an apprenticeship. I am now a qualified
+              <p>
+                In 1999 I left school mid-way through year 10 to begin an apprenticeship. I am now a qualified
                 plasterer
                 after completing my Certificate III General Construction (Wall and Ceiling lining) in 2003. I attended
                 Northern Melbourne Institute of TAFE(NMIT) Now known as Melbourne Polytechnic. </p>
             </div>
             <div>
-              <p>Immediately after completing my apprenticeship, I joined the Australian Army as a Gun Number (Gunner).
-                A
-                Gunner is responsible for the maintenance and operation of the Artillery Gun. In case you’re wondering,
+              <p>
+                Immediately after completing my apprenticeship, I joined the Australian Army as a Gun Number (Gunner).
+                A Gunner is responsible for the maintenance and operation of the Artillery Gun. In case you’re wondering,
                 the primary objective of the Artillery is to support the infantry with indirect firepower. A Gunner is
                 also referred to as a ‘nine-mile sniper’ can hit a 40-gallon drum from up to 15km away from the target.
               </p>
@@ -260,6 +262,8 @@
                 <li>&emsp; - Where do we use Information Technology.</li>
                 <li>&emsp; - How we apply Information Technology.</li>
               </ul>
+             </div>
+            <div>
               <p>
                 By gaining a solid understanding of these ideas I have listed above,
                 I expect to develop a solid understanding of the design, development and application of software and
