--- a/Project-Idea/index.html
+++ b/Project-Idea/index.html
@@ -91,7 +91,7 @@
           <h1>Project Idea</h1>
           <h4>
             Supermarket Panic Mitigation and</br>
-            Emergency Crisis Control System
+            Emergency crisis control System
           </h4>
         </div>
 
@@ -125,34 +125,33 @@
         <div>
           <h3>Description</h3>
           <p class="paragraph">
-            The Supermarket Panic Mitigation and Emergency crisis control is an Idea I have to mitigate the impact of
-            panic buying during times of crisis and hopefully prevent it. The main purpose is to monitor supply to
-            individuals for critical items such as groceries. It is also designed to limit crowds which attend
-            supermarkets by implementing odd and even days similar to that of water restrictions. This will be
-            determined by street number. A family will have limits on how many times a week they can attend the store.
+            The Supermarket Panic Mitigation and Emergency crisis control is an Idea designed to mitigate the impact of
+            panic buying during times of crisis. The main purpose is to monitor supply to individuals for critical items
+            such as groceries and medicinal products. It is also designed to limit crowds which attend supermarkets by
+            implementing odd and even days similar to that of water restrictions. This will be determined by street
+            number. A family will have limits on how many times a week they can attend the store.
           </p>
         </div>
         <div>
           <p>
-            In order to enter the supermarket, the customer must first scan your card at a card reader which will open
-            the doors. The card must then be scanned at the checkout and will alert the checkout attendant if an item
-            has been over purchased. The customer can monitor their limits on a mobile application and if they scan the
-            item with their phone it will let them know if they can purchase it which will save embarrassment at the
-            checkout.
+            The system will have the ability to implement a booking platform to further maintain the good order of the
+            community, although, this could complicate the situation if servers crash due to high traffic volumes or
+            denial of service attacks.
           </p>
         </div>
         <div>
           <p>
-            The system will also have the ability to implement a booking platform to further maintain the good order of
-            the community, although, this could further complicate the situation if servers crash due to high traffic
-            volumes or denial of service attacks.
+            In order to enter the supermarket, the customer must first scan their card at at the entrance which will
+            open the doors. The doors will only open if it is their allocated day. The card must then be scanned at the
+            checkout and will alert the attendant if a limit is exceeded.
           </p>
         </div>
+
         <div>
           <p>
-            The customer can monitor their limits on a mobile application and if they scan the item with their phone and
-            will let them know if they can purchase the product which will save embarrassment at the checkout and reduce
-            holdups and re-stocking.
+            The customer can monitor their limits on a mobile application, if they scan the item with their smartphone
+            it will let them know if they can purchase the product or not. This feature will save embarrassment at the
+            checkout and reduce holdups and unnecessary labor such as restocking.
           </P>
         </div>
         <div>
@@ -165,21 +164,22 @@
         <div>
           <p>
             This system with be linked with the relevant departments such as the department of human services and will
-            allow the implemented limits to be across the country rather than each supermarket.</p>
+            allow the implemented limits to be country wide rather than store wide.
+          </p>
         </div>
         <div>
           <h3>Tools and Technologies</h3>
           <p class="paragraph">
-            This system will require the use of cards. A Medicare card can be used as an alternative to dispensing new
-            cards. Card readers will be required, and databases will need to be created and managed. It will be
-            dependent on mobile applications and API’s.
+            This system will require the use of cards or FOB. A Medicare card can be used as an alternative to
+            dispensing new cards and will have a digital card option for mobile Apps. Card readers and scanners will be
+            required, and databases will need to be created and managed. The system will be dependent on mobile
+            applications and API’s and databases.
           </p>
         </div>
         <div>
           <h3>Skills required</h3>
           <p class="paragraph">
-            In order to successfully develop this system, the team of developers will need to be able
-            to program using
+            In order to successfully develop this system, the team of developers will need to be able to program using
             languages such as JAVA, Python, C#, C++ and swift to develop the applications to interact with the system
             such mobile, desktop and web applications.
           </P>
@@ -189,15 +189,14 @@
             Programming knowledge of SQL will be required to develop the Database management systems to store customer
             information, previous purchases and limits which have been enforced. PHP will be used for communicating
             between the application and the database. It will be important to have the appropriate knowledge to be able
-            use Application programming interfaces (API’s) as these may be important in the development of the system to
-            allow our supermarkets and the department of human services to work together. </p>
+            use Application Programming Interfaces (API’s) as these will be important in the development of the system
+            to allow our supermarkets and the department of human services to work together.
           </p>
         </div>
         <div>
           <h3>Outcome</h3>
           <p class="paragraph">
-            The successful integration of this application in the community will vastly mitigate the
-            distress felt by
+            The successful integration of this application in the community will vastly mitigate the distress felt by
             all members affected by an emergency where panic buying has or is at risk of occurring. This will be due to
             the ability that supermarkets will have to monitor customer limits on purchases such as one per person.
           </p>
@@ -206,30 +205,24 @@
           <p>
             This will further mitigate the issue a lot of people who work are facing, such as not being able to go to
             the store until the end of the day when shelves have been cleared, or families only being able to get only
-            one
-            of an item such as pasta when there are more than one person in the home because a partner is at work and
-            the kids
-            are
-            at school and cannot attend the grocery store.
+            one of an item such as pasta when there are more than one person in the home because a partner is at work
+            and the kids are at school and cannot attend the grocery store.
           </P>
         </div>
         <div>
           <p>
             This will solve the problem families are facing by drastically reducing the crowds within a supermarket by
             having odd and even days. It will allow one person in a home to buy enough supplies within the limits
-            allowed
-            for each person in that family without everyone being there. This will encourage society to function as
-            normal
-            as possible during a time of mass panic and uncertainty.
+            allowed for each person in that family without everyone being there. This will encourage society to function
+            as normal as possible during a time of mass panic and uncertainty.
           </P>
         </div>
         <div>
           <p>
             The development of this system will have a positive impact on the community. Although it will be
-            frustrating, if
-            successful It should aid the reduction of violence and aggression, encourage compassion, honesty and
-            integrity.
-            But most of all it will bring the community together, not divide it. And everyone will get their fair share.
+            frustrating, if successful It should aid the reduction of violence and aggression, encourage compassion,
+            honesty and integrity. But most of all it will bring the community together, not divide it. And everyone
+            will get their fair share.
           </p>
         </div>
       </div>
