--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <li><a class="nav-Link" href="Ideal-Job/">Career</a></li>
               <li><a class="nav-Link" href="Profile/">Profile</a></li>
               <li><a class="nav-Link" href="Project-Idea/">Project</a></li>
+             <li><a class="nav-Link" href="/References/">References</a></li>
             </ul>
           </nav>
           <hr>
@@ -76,6 +77,7 @@
             <li><a class="nav-Link" href="Ideal-Job/">career</a></li>
             <li><a class="nav-Link" href="Profile/">Profile</a></li>
             <li><a class="nav-Link" href="Project-Idea/">Project</a></li>
+            <li><a class="nav-Link" href="/References/">References</a></li>
           </ul>
         </nav>
       </div>
