--- a/Ideal-Job/index.html
+++ b/Ideal-Job/index.html
@@ -33,7 +33,6 @@
               <li><a class="nav-Link active" href="/Ideal-Job/">Career</a></li>
               <li><a class="nav-Link" href="/Profile/">Profile</a></li>
               <li><a class="nav-Link" href="/Project-Idea/">Project</a></li>
-            <li><a class="nav-Link" href="/References/">References</a></li>
             </ul>
           </nav>
           <hr>
@@ -76,7 +75,6 @@
             <li><a class="nav-Link active" href="/Ideal-Job/">career</a></li>
             <li><a class="nav-Link" href="/Profile/">Profile</a></li>
             <li><a class="nav-Link" href="/Project-Idea/">Project</a></li>
-            <li><a class="nav-Link" href="/References/">References</a></li>
           </ul>
         </nav>
       </div>
@@ -96,7 +94,6 @@
               <h5><a href="https://fbr.bamboohr.com/jobs/view.php?id=28">Control Systems Engineer</a></h5>
             </div>
             <div>
-
               <h3>Who are Fast Bricks Robotics?</h3>
               <p class="paragraph">
                 Fast bricks Robotics have developed a robot called the Hadrian-X. Which can lay bricks 15 times the size
@@ -112,6 +109,7 @@
                 Hadrian-X allowing it to achieve significant performance advantages.
               </p>
             </div>
+            
             <div>
               <h3>Position Description</h3>
               <p>
@@ -124,7 +122,7 @@
                 applicant will be pivotal in the contribution to design and implementation of projects.
               </p>
               <div class="img">
-                <img src="/resources/img/positionDesc.png" alt="">
+                <img src="/resources/img/controlSystemsEngineer.png" alt="Control System Engineers ad">
               </div>
             </div>
 
@@ -136,6 +134,7 @@
                 our society has to offer.
               </p>
             </div>
+
             <div>
               <p>
                 My number one career goal is to make a positive impact on society through computational problem solving,
@@ -145,6 +144,7 @@
                 become boring, tedious and tiresome.
               </p>
             </div>
+
             <div>
               <h3>Skills I currently have </h3>
               <p>
@@ -153,12 +153,14 @@
                 result to a client.
               </p>
             </div>
+
             <div>
               <p>
                 Working within a team has been paramount during my career as a Gunner in the Royal Australian Artillery
                 and as a plasterer. I also keep an open mind when working in a group, I am willing to step up
               </p>
             </div>
+
             <div>
               <p>
                 I am very inquisitive. If I have an idea, I research information about it. I am always seeking
@@ -166,6 +168,7 @@
                 attaining new skills.
               </p>
             </div>
+
             <div>
               <h3>How will I plan for this position?</h3>
               <p>
@@ -174,8 +177,9 @@
                 I must also have experience in working with and a minimum 6 years experience in a similar role.
               </p>
             </div>
+
             <div class="img">
-              <img src="/resources/img/img6.png" alt="">
+              <img src="/resources/img/skills.png" alt="">
             </div>
           </div>
         </div>
